@@ -6,22 +6,11 @@
 
 ?>		
 	<article id="post-<?php the_ID(); ?>" <?php post_class(); ?>>
+		
 		<header class="entry-header">
-				<?php if ( is_sticky() && is_home() && ! is_paged() ) : ?>
-					<div class="featured-post"><?php _e( 'Featured', 'manduca' ) ?></div>
-				<?php endif; ?>
-
-			<?php if ( is_single() ) : ?>
-				<h1 class="entry-title"><?php the_title(); ?></h1>
-				<?php else : ?>
-				<h2 class="entry-title">
-					<a href="<?php the_permalink(); ?>" rel="bookmark"><?php the_title(); ?></a>
-				</h2>
-			<?php endif; // is_single() ?>
-			
-			<?php manduca_entry_meta( true ); ?>
-			<div class="clearfix"></div>
+			<?php manduca_display_entry_header(); ?>
 		</header><!-- .entry-header -->
+		
 		
 		<?php edit_post_link( __( 'Edit', 'manduca' ), '<span class="edit-link"><i class="fa fa-pencil" aria-hidden="true"></i> ', '</span>' ); ?>
 		
